# parlant-qna

./: .gitignore  Dockerfile  README.md  docker-compose.yml  import_storyqa.py  load_data.py  mypy.ini  parlant-qna-db.json  pyproject.toml  pytest.ini
example_qna/: collaboration.md  debugging_agents.md  dev_workflow.md  guideline_maintenance.md  handling_conflicts.md  inappropriate_inputs.md  iterating_on_guidelines.md  modifying_behavior.md  parlant_vs_graphs.md  parlant_vs_langchain.md  parlant_vs_llm_api.md  parlant_vs_rag.md  sensitive_data.md  testing_guidelines.md
parlant_qna/: app.py  cli.py  litellm_service.py  server.py
tests/: test_api.py  test_app.py  test_utilities.py
