[tool.poetry]
name = "parlant-qna"
version = "0.1.0"
description = "A Questions & Answers tool service for Parlant"
authors = ["Yam Marcovitz <yam@emcie.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
